# PACKAGE METADATA
[package]
name = "wright"
description = "The wright programming language compiler and tooling."
license = "MIT"
version = "0.9.0"
authors = ["Venus Xeon-Blonde <venusflameblonde@gmail.com>"]
repository = "https://github.com/vcfxb/wright-lang"
documentation = "https://docs.rs/wright"
readme = "../README.md"
keywords = ["wright", "language", "bytecode", "compiler", "interpreter"]
edition.workspace = true
rust-version.workspace = true

# DOC.RS SPECIFIC METADATA
[package.metadata.docs.rs]
# document all features
all-features = true

# CRATES.IO BADGES
[badges]
maintenance = {status = "actively-developed"}

# LIBRARY METADATA
[lib]
name = "wright"
test = true
doctest = true
doc = true

# BINARIES
[[bin]]
name = "wright"
test = false
doc = false
doctest = false
required-features = []

# BENCHMARKS
[[bench]]
name = "lexer"
harness = false

# FEATURE FLAGS
# These are used to determine which parts of the crate are compiled/available.
[features]

# By default include everything required for building the wright binary, which includes everything used for building 
# wright as a library.  
default = ["wright_binary"]

# Features and dependencies required for the wright binary. These are built by default. 
wright_binary = ["wright_library_defaults", "dep:clap"]

# Features and dependencies useful when the wright binary is not being built or used. 
wright_library_defaults = ["file_memmap"]

# Source tracking requires just the base set of dependencies and standard library. 
source_tracking = [
    "std",
    "dep:dashmap",
    "derive_more/display",
]

# Reporting errors requires soruce tracking and the ariadne dependency to generate colors for the terminal. 
reporting = [
    "source_tracking", 
    "dep:termcolor",
    "dep:codespan-reporting"
]

# Loading memory mapped files from the disk requires memmap2, fs4, and the reporting feature to correctly and efficiently 
# read from disk. 
file_memmap = [
    "reporting",
    "dep:memmap2",
    "dep:fs4",
    "dep:anyhow"
]

# Feature flag to indicate use of the standard library.
std = [
    # The "std" feature is not yet out for derive_more -- todo for the next version released.
    # "derive_more?/std", 
    "anyhow?/std"
]

# Feature flag indicating no features are enabled. 
none = []

# SIMPLE DEPENDENCIES: 
[dependencies]

# Unicode identifier functions
# unicode-ident = "1.0"

# Big Integers
# num = "0.4"

# DEPENDENCIES WITH/AS FEATURES:

# derive_more is used for allowing us to derive additional traits like From and Display.
# Currently used by features: 
# - "source_tracking"
[dependencies.derive_more]
version = "0.99.18"
default-features = false
optional = true

# Anyhow is used to make error handling easier. 
[dependencies.anyhow]
version = "1.0.86"
default-features = false
optional = true

# dashmap is used as a fast, concurrent hash map implementation 
# Optional since it's used for source tracking, which can be turned off. 
[dependencies.dashmap]
version = "6.0.1"
features = ["rayon"]
optional = true

# codespan-reporting is the internal engine used to render diagnostics.
# Optional since it's only used when error reporting is required. 
[dependencies.codespan-reporting]
version = "0.11.1"
optional = true

# Terminal output colors
# Optional: Required for reporting.
[dependencies.termcolor]
version = "1.4.1"
optional = true

# Memory mapped files. 
# Optional: Required for memmory mapped file access. 
[dependencies.memmap2]
version = "0.9.3"
optional = true

# Portable (windows, mac, linux) file locking
# Optional: Required for memmory mapped file access. 
[dependencies.fs4] 
version = "0.7.0"
features = ["sync"]
optional = true

# Comand-line interface generator
# Optional: Used only by the wright binary. 
[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

# Unsafe bindings to LLVM 
# See https://llvm.org/.
[dependencies.llvm-sys]
version = "180"
features = ["force-static"]

# TEST DEPENDENCIES
[dev-dependencies]

# Criterion is used for benchmarking. 
criterion = "0.5.1"

# Rayon is used to do various brute-force tests in parallel
rayon = "1.8.0"

# indoc is used for indentation in tests
indoc = "2.0.5"

# BUILD DEPENDENCIES
[build-dependencies]

# Used for showing feature/cfg info on rustdoc/docs.rs. 
rustc_version = "0.4.0"

# Used for capturing build time and platform information and making it available at runtime. 
built = "0.7"
